--- a/appspec.yml
+++ b/appspec.yml
@@ -3,3 +3,8 @@ os: linux
 files:
   - source: /
     destination: /home/ec2-user/app
+hooks:
+  BeforeInstall:
+    - location: scripts/install_dependencies.sh
+      timeout: 300
+      runas: root
