--- a/appspec.yml
+++ b/appspec.yml
@@ -8,3 +8,7 @@ hooks:
     - location: scripts/install_dependencies.sh
       timeout: 300
       runas: root
+  AfterInstall:
+    - location: scripts/docker_build.sh
+      timeout: 300
+      runas: root
