--- a/kubernetes/service.yml
+++ b/kubernetes/service.yml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: Service_NAME
+  name: SERVICE_NAME
   namespace: NAMESPACE
 spec:
   type: LoadBalancer
   selector:
-    app: Service_NAME
+    app: SERVICE_NAME
   ports:
    -  protocol: TCP
       port: 80
