Added Ingress file

--- a/kubernetes/service.yml
+++ b/kubernetes/service.yml
@@ -4,7 +4,7 @@ metadata:
   name: SERVICE_NAME
   namespace: NAMESPACE
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   selector:
     app: SERVICE_NAME
   ports:
