--- a/argocd/application.yml
+++ b/argocd/application.yml
@@ -10,7 +10,7 @@ spec:
   source:
     path: argocd
     repoURL: 'https://github.com/saqib-mehraj-comprinno/Demo-app-nginx.git'
-    targetRevision: HEAD
+    targetRevision: cicd
   sources: []
   project: nginx
   syncPolicy:
