--- a/argocd/deployment.yml
+++ b/argocd/deployment.yml
@@ -16,7 +16,7 @@ spec:
         app: nginx
     spec:
       containers:
-        - image: nginx:latest
+        - image: nginx:stable
           name: nginx
           ports:
             - containerPort: 80
